--- a/test/fixtures/restaurants.yml
+++ b/test/fixtures/restaurants.yml
@@ -3,11 +3,11 @@
 one:
   name: MyString
   address: MyString
-  description: MyText
-  stars: 1
+  phone_number: MyString
+  category: MyString
 
 two:
   name: MyString
   address: MyString
-  description: MyText
-  stars: 1
+  phone_number: MyString
+  category: MyString
